# internal/guest/model/request_model.go
@@ -5,3 +5,7 @@ type GuestRegisterRequest struct {
 	UserAgent string `json:"user_agent" binding:"required"`
 	IpAddress string `json:"ip_address" binding:"required"`
 }
+
+type GuestRefreshRequest struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
